add CGIPassAuth to .htaccess
required for working login using php-fpm and newer apache
more at http://stackoverflow.com/a/33254772 and https://httpd.apache.org/docs/2.4/en/mod/core.html#CGIPassAuth

--- a/.htaccess
+++ b/.htaccess
@@ -4,4 +4,6 @@
 		RewriteEngine on
 		RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 	</IfModule>
+	# for Apache 2.4.13 or later
+	CGIPassAuth on
 </IfModule>
