Sur la branche master: Add version test on htaccess directive

--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,7 @@
 		RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 	</IfModule>
 	# for Apache 2.4.13 or later
-	CGIPassAuth on
+	<IfVersion >= 2.4.13>
+		CGIPassAuth on
+	</IfVersion>
 </IfModule>
